# claw-vault

./: .gitignore  LICENSE  README.md  claw_vault.py  inject_openclaw.py  pyproject.toml  requirements.txt  start-openclaw.sh  vault-client.ts
plugin/: index.ts  openclaw.plugin.json  package.json
plugin/skills/: SKILL.md
