[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claw-vault"
version = "0.1.0"
description = "Encrypted credential vault with TOTP unlock for self-hosted OpenClaw deployments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["openclaw", "secrets", "vault", "credentials", "totp", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "cryptography>=42.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
]

[project.scripts]
claw-vault = "claw_vault:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/claw-vault"
Issues = "https://github.com/YOUR_USERNAME/claw-vault/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_vault*"]
